--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ p
 
 #footer div
 {
+	padding: 5px;
 	/*border: 1px #555 solid;*/
 }
 /*--------------------------------------------------------------*/
