--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,13 @@ p
 	border-radius: 20px;
 	border: solid #f4c456;
 	background: #f4c456;
-	padding: 10px;
+	padding: 10px 5px;
+
+	text-align: center;
+
+}
+.date_aside
+{
+	font-weight: bold;
 }
 /*--------------------------------------------------------------*/
