--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,11 @@ p
 {
 }
 /*--------------------------------------------------------------*/
+#navigation ul
+{
+	list-style-type: none; /*del puce*/
+}
+
 #navigation li:hover
 {
 	background-color: #aa1715;
@@ -132,6 +137,11 @@ p
 {
 	padding: 5px;
 	/*border: 1px #555 solid;*/
+}
+
+#footer_bas li
+{
+	list-style-type: none; /*del puce*/
 }
 /*--------------------------------------------------------------*/
 #reseaux_sociaux
