--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,7 @@ p
 /*--------------------------------------------------------------*/
 #body
 {
+	margin-top: 50px;
 
 }
 
@@ -141,6 +142,7 @@ p
 
 #footer
 {
+	margin-top: 150px;
 	color: #ECBC2F;
 	background-color: #000000;
 	text-align: center;
