--- a/css/styles.css
+++ b/css/styles.css
@@ -107,10 +107,12 @@ p
 	font-size: 16px;
 }
 
-.lettrine
+.lettrine::first-letter
 {
-	font-size: 45px;
-
+	float: left;
+	font-size: 40px;
+	margin: 5px 10px 0px 0px;
+	padding-top: 8px;
 }
 
 .date_article
