--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,7 @@ p
 	color: #ECBC2F;
 	background-color: #000000;
 	text-align: center;
+	z-index: 10;
 }
 #footer a
 {
@@ -262,8 +263,12 @@ p
 	top: 150px;
 	right: -150px;
 	transition: 250ms;
+	z-index: 5;
 }
-
+#aside h2
+{
+	margin: 0;
+}
 #aside p
 {
 	font-size: 14px;
