--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ p
 	color: #ECBC2F;
 	background-color: #000000;
 	text-align: center;
-	z-index: 10;
+	position: relative;
 }
 #footer a
 {
@@ -263,7 +263,6 @@ p
 	top: 150px;
 	right: -150px;
 	transition: 250ms;
-	z-index: 5;
 }
 #aside h2
 {
