--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ p
 	width: 1130px;
 	margin: 0 auto;			/*Marge*/
 	position: relative;
+	background-color: white;
 }
 
 /*--------------------------------------------------------------*/
