--- a/css/styles.css
+++ b/css/styles.css
@@ -125,12 +125,14 @@ p
 
 #article1, #article2
 {
-	width: 500px;
+	width: 400px;
 	border-radius: 20px;
 	border: solid #f4c456;
 	background-color: rgba(255, 255, 255, 0.80);
 	padding: 10px;
 	line-height: 22px; /*Interlignage*/
+	float: left;
+	margin-left: 90px;
 }
 #article1 h1, #article2 h1
 {
