--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ p
 #header
 {
 	background-color: #f4c456;
+	z-index: 2;
 }
 /*--------------------------------------------------------------*/
 #logo
@@ -114,7 +115,12 @@ p
 
 #slider
 {
+	z-index: 0;
+}
 
+.bxslider
+{
+	z-index: 0;
 }
 /*--------------------------------------------------------------*/
 #body
