--- a/css/styles.css
+++ b/css/styles.css
@@ -310,3 +310,9 @@ p
 	right: 0px
 }
 /*--------------------------------------------------------------*/
+
+.bx-wrapper .bx-viewport
+{
+	left: 0;
+	border: 0;
+}
