Header > Slider > modif margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ p
 .bxslider
 {
 	z-index: 0;
+	margin: 0;
 }
 
 .bx-wrapper .bx-viewport
@@ -133,6 +134,7 @@ p
 {
 	z-index: 0;
 }
+
 /*--------------------------------------------------------------*/
 #body
 {
