--- a/css/styles.css
+++ b/css/styles.css
@@ -323,5 +323,14 @@ p
 	right: 0px
 }
 /*--------------------------------------------------------------*/
+#google_map
+{
+}
 
+#content
+{
+	padding: 50px 0;
+	margin: 0 auto;
+	width: 800px;
+}
 
