--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ p
 	/*color: #f4c456;*/
 }
 
-#navigation li:hover a
+#navigation a:hover 
 {
 	color: #f4c456;
 	text-decoration: none;
@@ -329,8 +329,6 @@ p
 
 #content
 {
-	padding: 50px 0;
-	margin: 0 auto;
 	width: 800px;
 }
 
